# SynthAPT

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: compiler.rs  lib.rs  stubs.rs
common/src/tui/: file_browser.rs  layout.rs  metadata.rs  mod.rs  popup.rs  selection.rs  splash.rs  text.rs  theme.rs
common/src/tui/canvas/: animation.rs  draggable_canvas.rs  mod.rs  shapes.rs
common/src/tui/panes/: mod.rs  scrollable_pane.rs
editor/src/agent/: claude.rs
playbooks/: bof_example.json  hollow.json  npc.json  psexec.json
synthapt/: Cargo.toml
synthapt/src/: cli.rs  config.rs  hooks.rs  main.rs  message.rs  model.rs  shortcuts.rs  update.rs  wizard.rs
synthapt/src/agent/: claude.rs  mod.rs  ollama.rs
synthapt/src/panes/: mod.rs
tests/: run_payload.py  test_all_opcodes.json  test_all_opcodes.py  test_all_opcodes_py.json
win64/: Cargo.toml  Linker.ld  Makefile.toml  README.md  rust-toolchain.toml
win64/src/: blobs.rs  bof.rs  com.rs  enumerate.rs  exec.rs  fs.rs  inject.rs  ldap.rs  main.rs  mem.rs  net.rs  python.rs  reg.rs  shell.rs  tasks.rs  token.rs  wmi.rs
win64/src/c2/: mod.rs
win64/src/libs/: advapi.rs  frida.rs  instance.rs  k32.rs  ldap32.rs  ldrapi.rs  mod.rs  netapi32.rs  ntapi.rs  ntdef.rs  ntpsapi.rs  ole.rs  utils.rs  winhttp.rs  winsock.rs
win64/src/libs/coffee/: beacon_api.rs  beacon_pack.rs  loader.rs  mod.rs  parser.rs
