[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
tui = ["dep:ratatui", "dep:unicode-width"]

[dependencies]
ratatui = { version = "0.30.0", optional = true }
unicode-width = { version = "0.2.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
regex = "1"
