[package]
name = "synthapt"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", features = ["tui"] }
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6.3"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2.9", features = ["json"] }
dirs = "5"
